# Mentis

./: .gitignore  2  Cargo.toml  README.md  à
cpp-core/: CMakeLists.txt
cpp-core/bindings/: pybind.cpp
cpp-core/include/: graph_generated.h
cpp-core/include/engine/: engine.h
cpp-core/include/graph/: graph.h
cpp-core/include/ops/: ops.h
cpp-core/include/tensor/: dtype.h
cpp-core/src/engine/: engine.cpp
cpp-core/src/graph/: graph.cpp
cpp-core/src/tensor/: dtype.cpp
crates/mentis-backend/: Cargo.toml
crates/mentis-compiler/: Cargo.toml
crates/mentis-compiler/crates/mentis-fusion/: Cargo.toml
crates/mentis-core/: Cargo.toml
crates/mentis-engine/: Cargo.toml
crates/mentis-engine/src/: lib.rs
crates/mentis-fusion/: Cargo.toml
crates/mentis-fusion/src/: graph.rs
crates/mentis-macros/: Cargo.toml
crates/mentis-macros/src/: lib.rs
crates/mentis-ops/: Cargo.toml
crates/mentis-ops/src/: lib.rs
crates/mentis-opt/: Cargo.toml
crates/mentis-opt/src/: lib.rs
crates/mentis-runtime/: Cargo.toml
crates/mentis-tensor/: Cargo.toml
crates/mentis-tensor/src/: lib.rs
mentis/: graph.py  tensor.py
python/: convert_graph.py  graph.fbs  graph.py  graph_generated.h  tensor.py
python/Mentis/: DType.py  Graph.py  Node.py
tests/: engine_test.rs  graph_test.rs  tensor_test.rs
